# all_distance_sketch

./: .Rhistory  .gitignore  0_dijkstra  Doxyfile  Makefile  Makefile.am  Makefile.in  OWNERS  README  aclocal.m4  all_distance_sketch.sublime-project  all_distance_sketch.sublime-workspace  config.status  configure  configure.ac  configure.scan  cover_compare.ipynb  reverse_rank_distribution.ipynb  reverse_rank_vs_distance.ipynb  thread_run_time_analysis.ipynb
.ipynb_checkpoints/: reverse_rank_distribution-checkpoint.ipynb  reverse_rank_vs_distance-checkpoint.ipynb  thread_run_time_analysis-checkpoint.ipynb
all_distance_sketch/: common.h
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  output.7  output.9  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
doc/: MainPage.h  RelatedPages.h
examples/: graph.cpp  iterate_sketch.cpp  reverse_rank.cpp  save_load_sketch.cpp  sketch.cpp  t_skim.cpp
html/: GraphSketchTut.html  GraphTut.html  Install.html  MainPage_8h_source.html  Overview.html  RelatedPages_8h_source.html  ReverseRankTut.html  TSkimTut.html  Tutorial_8h_source.html  Tutorials.html  all__distance__sketch_8h.html  all__distance__sketch_8h_source.html  all__distance__sketch_8pb_8h_source.html  all__distance__sketch_8proto.html  annotated.html  classall__distance__sketch_1_1CollectorNodesUpToTRank-members.html  classall__distance__sketch_1_1CollectorNodesUpToTRank.html  classall__distance__sketch_1_1Cover-members.html  classall__distance__sketch_1_1Cover.html  classall__distance__sketch_1_1DefaultDijkstraCallBacks-members.html  classall__distance__sketch_1_1DefaultDijkstraCallBacks.html  classall__distance__sketch_1_1DefaultReverseRankCallBacks-members.html  classall__distance__sketch_1_1DefaultReverseRankCallBacks.html  classall__distance__sketch_1_1DijkstraRankCallBack-members.html  classall__distance__sketch_1_1DijkstraRankCallBack.html  classall__distance__sketch_1_1GraphSketch-members.html  classall__distance__sketch_1_1GraphSketch.html  classall__distance__sketch_1_1NodeIdDistanceData-members.html  classall__distance__sketch_1_1NodeIdDistanceData.html  classall__distance__sketch_1_1NodeSketch-members.html  classall__distance__sketch_1_1NodeSketch.html  classall__distance__sketch_1_1SketchDijkstraCallBacks-members.html  classall__distance__sketch_1_1SketchDijkstraCallBacks.html  classall__distance__sketch_1_1TSkimApproxSeedExactCover-members.html  classall__distance__sketch_1_1TSkimApproxSeedExactCover.html  classall__distance__sketch_1_1TSkimApproxVsExact-members.html  classall__distance__sketch_1_1TSkimApproxVsExact.html  classall__distance__sketch_1_1TSkimBase-members.html  classall__distance__sketch_1_1TSkimBase.html  classall__distance__sketch_1_1TSkimDijkstraCallBacks-members.html  (+178 more)
latex/: GraphSketchTut.tex  GraphTut.tex  Install.tex  Overview.tex  ReverseRankTut.tex  TSkimTut.tex  all__distance__sketch_8h.tex  all__distance__sketch_8proto.tex  annotated.tex  classall__distance__sketch_1_1CollectorNodesUpToTRank.tex  classall__distance__sketch_1_1Cover.tex  classall__distance__sketch_1_1DefaultDijkstraCallBacks.tex  classall__distance__sketch_1_1DefaultReverseRankCallBacks.tex  classall__distance__sketch_1_1DijkstraRankCallBack.tex  classall__distance__sketch_1_1GraphSketch.tex  classall__distance__sketch_1_1NodeIdDistanceData.tex  classall__distance__sketch_1_1NodeSketch.tex  classall__distance__sketch_1_1SketchDijkstraCallBacks.tex  classall__distance__sketch_1_1TSkimApproxSeedExactCover.eps  classall__distance__sketch_1_1TSkimApproxSeedExactCover.tex  classall__distance__sketch_1_1TSkimApproxVsExact.eps  classall__distance__sketch_1_1TSkimApproxVsExact.tex  classall__distance__sketch_1_1TSkimBase.eps  classall__distance__sketch_1_1TSkimBase.tex  classall__distance__sketch_1_1TSkimDijkstraCallBacks.tex  classall__distance__sketch_1_1TSkimDijkstraCallBacksDistancePrune.tex  classall__distance__sketch_1_1TSkimExactComputationBased.eps  classall__distance__sketch_1_1TSkimExactComputationBased.tex  classall__distance__sketch_1_1TSkimForwardRank.eps  (+73 more)
scripts/: cummulative_dist.py  (+2 more)
src/: MainPage.h  Makefile  Makefile.am  Makefile.in  all_distance_sketch.h  common.h
src/.deps/: all_distance_sketch.pb.Po  benchmark.Po  cover.pb.Po  diffusion_app.Po  dijkstra_app.Po  distance_diffusion_app.Po  embedding.pb.Po  estimate.Po  ranking.pb.Po  reach_diffusion_app.Po  reverse_rank_app.Po  reverse_rank_batch_app.Po  run_all.Po  sketch_calculation_app.Po  t_skim_exact_app.Po  t_skim_reverse_rank.Po  t_skim_reverse_rank_app.Po
src/algorithms/: dijkstra_min_weight_path.h  dijkstra_shortest_paths.h  distance_diffusion.h  reach_diffusion.h  reverse_rank.h  sketch_calculation.h  t_skim.h  t_skim_dijkstra.h  t_skim_reverse_rank.h
src/algorithms/ut/: algo_test.cpp  serialization_test.cpp  t_skim_test.cpp  test_dijkstra_min_weight_path.cpp
src/app/: diffusion_app.cpp  diffusion_app.h  dijkstra_app.cpp  dijkstra_app.h  distance_diffusion_app.cpp  distance_diffusion_app.h  reach_diffusion_app.cpp  reach_diffusion_app.h  reverse_rank_app.cpp  reverse_rank_app.h  reverse_rank_batch_app.cpp  reverse_rank_batch_app.h  sketch_calculation_app.cpp  sketch_calculation_app.h  t_skim_exact_app.cpp  t_skim_exact_app.h  t_skim_reverse_rank.cpp  t_skim_reverse_rank.h  t_skim_reverse_rank_app.cpp  t_skim_reverse_rank_app.h  utils.h
src/app/ut/: app_test.cpp
src/experiments/results/: benchmark.cpp  estimate.cpp
src/graph/: graph.h  snap_graph_adaptor.h
src/graph/ut/: basic_graph.cpp  run_all.cpp
src/labels/: labels.h
src/labels/ut/: labels_test.cpp
src/measures/: decay_interface.h
src/proto/: all_distance_sketch.proto  all_distance_sketch_pb2.py  cover.proto  cover_pb2.py  embedding.proto  embedding_pb2.py  ranking.pb.cc  ranking.pb.h  ranking.proto  ranking_pb2.py
src/scripts/: analyze_samples.ipynb  cover_compare.ipynb  reverse_rank_vs_distance.ipynb
src/sketch/: graph_sketch.h  node_sketch.h  rank_calculator.h  utils.h
src/sketch/ut/: ads_test.cpp
src/utils/: utils.h
(+118 files in other folders)
